<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_app"
    android:padding="@dimen/espacio_L">

    <LinearLayout
        android:id="@+id/headerContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/formContainer">

        <ImageView
            android:layout_width="@dimen/header_h_small"
            android:layout_height="@dimen/header_h_small"
            android:src="@drawable/ic_login_solucionador"
            android:layout_marginBottom="@dimen/espacio_M"/>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_sol_titulo"
            android:fontFamily="sans-serif-black"
            android:textColor="@color/brand_azul"
            android:textSize="@dimen/font_display" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_sol_subtitulo"
            android:textColor="@color/txt_cuerpo"
            android:textSize="@dimen/font_subtitulo"
            android:layout_marginTop="@dimen/espacio_XS"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/formContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/headerContainer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/espacio_M"
            android:hint="@string/login_cli_hint_email"
            app:boxStrokeColor="@color/brand_azul"
            app:hintTextColor="@color/brand_azul"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_Mail_Solucionador_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textColor="@color/txt_titulo"
                android:textColorHint="@color/txt_cuerpo"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/espacio_L"
            android:hint="@string/login_cli_hint_pass"
            app:boxStrokeColor="@color/brand_azul"
            app:hintTextColor="@color/brand_azul"
            app:endIconMode="password_toggle"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_Password_Solucionador_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="@color/txt_titulo"
                android:textColorHint="@color/txt_cuerpo"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_Iniciar_Secion_Solucionador"
            android:layout_width="match_parent"
            android:layout_height="@dimen/btn_h_std"
            android:text="@string/login_sol_btn_login"
            android:textSize="@dimen/font_btn"
            android:textStyle="bold"
            app:backgroundTint="@color/brand_azul"
            app:cornerRadius="@dimen/btn_radio_rect"
            android:layout_marginBottom="@dimen/espacio_M"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_sol_label_register"
            android:layout_gravity="center"
            android:textColor="@color/txt_hint"
            android:layout_marginBottom="@dimen/espacio_S"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_Ir_Registro_Solucionador"
            android:layout_width="match_parent"
            android:layout_height="@dimen/btn_h_std"
            android:text="@string/login_sol_btn_register"
            android:onClick="registroSolucionador"
            android:textColor="@color/brand_azul"
            app:backgroundTint="@color/bg_card"
            app:strokeColor="@color/brand_azul"
            app:strokeWidth="@dimen/btn_stroke"
            app:cornerRadius="@dimen/btn_radio_rect"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>