<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_app">

    <View
        android:id="@+id/viewHeader"
        android:layout_width="match_parent"
        android:layout_height="@dimen/header_h_xl"
        android:background="@color/brand_azul"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvHeaderTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nueva_incidencia_titulo"
        android:fontFamily="sans-serif-black"
        android:textColor="@color/white"
        android:textSize="@dimen/font_display"
        android:layout_marginTop="@dimen/espacio_XL"
        android:layout_marginStart="@dimen/espacio_L"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvHeaderSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nueva_incidencia_subtitulo"
        android:textColor="@color/txt_azul_claro"
        android:textSize="@dimen/font_subtitulo"
        app:layout_constraintStart_toStartOf="@+id/tvHeaderTitle"
        app:layout_constraintTop_toBottomOf="@+id/tvHeaderTitle" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/espacio_L"
        android:layout_marginTop="@dimen/espacio_L"
        app:cardCornerRadius="@dimen/card_radio"
        app:cardElevation="@dimen/card_elev"
        app:cardBackgroundColor="@color/bg_card"
        app:layout_constraintTop_toBottomOf="@+id/tvHeaderSubtitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/espacio_L">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nueva_incidencia_hint_titulo"
                app:boxStrokeColor="@color/brand_azul"
                app:hintTextColor="@color/brand_azul"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginBottom="@dimen/espacio_M">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_Titulo_Incidencia"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/txt_titulo"
                    android:inputType="textCapSentences" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nueva_incidencia_hint_desc"
                app:boxStrokeColor="@color/brand_azul"
                app:hintTextColor="@color/brand_azul"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginBottom="@dimen/espacio_M">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_Descripcion_Incidencia"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/input_h_multiline"
                    android:gravity="top|start"
                    android:textColor="@color/txt_titulo"
                    android:inputType="textMultiLine" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nueva_incidencia_label_ubicacion"
                android:textStyle="bold"
                android:textColor="@color/txt_cuerpo"
                android:layout_marginBottom="@dimen/espacio_S"/>

            <RadioGroup
                android:id="@+id/radioGroupLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="@dimen/espacio_M">

                <RadioButton
                    android:id="@+id/radioEnDomicilio"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/tag_domicilio"
                    android:buttonTint="@color/brand_naranja"
                    android:textColor="@color/txt_titulo"/>

                <RadioButton
                    android:id="@+id/radioEnCarretera"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/tag_carretera"
                    android:buttonTint="@color/brand_naranja"
                    android:textColor="@color/txt_titulo"/>
            </RadioGroup>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nueva_incidencia_hint_direccion"
                app:boxStrokeColor="@color/brand_azul"
                app:hintTextColor="@color/brand_azul"
                app:startIconDrawable="@android:drawable/ic_menu_myplaces"
                app:startIconTint="@color/txt_cuerpo"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginBottom="@dimen/espacio_L">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_Direccion_Incidencia"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/txt_titulo"
                    android:inputType="textPostalAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnRegistro_Incidencia"
                android:layout_width="match_parent"
                android:layout_height="@dimen/btn_h_std"
                android:text="@string/nueva_incidencia_btn_enviar"
                android:textSize="@dimen/font_btn"
                android:textStyle="bold"
                app:backgroundTint="@color/brand_naranja"
                android:textColor="@color/white"
                app:cornerRadius="@dimen/btn_radio"
                app:elevation="@dimen/btn_elev"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>