<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_app"
    tools:context=".MainSolucionadorActivity">

    <View
        android:id="@+id/viewHeader"
        android:layout_width="match_parent"
        android:layout_height="@dimen/header_h_xl"
        android:background="@color/brand_azul"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardProfileImage"
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:cardCornerRadius="40dp"
        app:cardBackgroundColor="@color/bg_card"
        app:cardElevation="@dimen/card_elev"
        android:layout_marginTop="@dimen/espacio_XXL"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/ic_person"
            app:tint="@color/brand_azul"
            android:padding="@dimen/espacio_M"/>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tvLabelBienvenida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_sol_bienvenida"
        android:textColor="@color/txt_azul_claro"
        android:textSize="@dimen/font_subtitulo"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@+id/cardProfileImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tvFuncionaID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_sol_nombre_demo"
        android:fontFamily="sans-serif-black"
        android:textColor="@color/white"
        android:textSize="@dimen/font_h3"
        android:layout_marginTop="@dimen/espacio_XS"
        app:layout_constraintTop_toBottomOf="@+id/tvLabelBienvenida"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/espacio_L"
        app:layout_constraintTop_toBottomOf="@+id/viewHeader"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_sol_menu_titulo"
            android:textStyle="bold"
            android:textColor="@color/brand_azul"
            android:textSize="@dimen/font_btn"
            android:layout_marginBottom="@dimen/espacio_M"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/irIn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/btn_h_big"
            android:text="@string/main_sol_btn_buscar"
            android:textSize="@dimen/font_btn"
            android:textStyle="bold"
            app:icon="@android:drawable/ic_menu_search"
            app:iconGravity="textStart"
            app:iconSize="@dimen/icon_M"
            app:iconTint="@color/white"
            app:backgroundTint="@color/brand_azul"
            app:cornerRadius="@dimen/card_radio"
            app:elevation="@dimen/card_elev"
            android:layout_marginBottom="@dimen/espacio_M"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/IrOr"
            android:layout_width="match_parent"
            android:layout_height="@dimen/btn_h_big"
            android:text="@string/main_sol_btn_ordenes"
            android:textSize="@dimen/font_btn"
            android:textStyle="bold"
            app:icon="@android:drawable/ic_menu_agenda"
            app:iconGravity="textStart"
            app:iconSize="@dimen/icon_M"
            app:iconTint="@color/white"
            app:backgroundTint="@color/brand_naranja"
            app:cornerRadius="@dimen/card_radio"
            app:elevation="@dimen/card_elev"
            android:layout_marginBottom="@dimen/espacio_M"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/CerrarS"
            android:layout_width="match_parent"
            android:layout_height="@dimen/btn_h_std"
            android:text="@string/main_sol_btn_cerrar"
            android:textColor="@color/txt_cuerpo"
            app:backgroundTint="@color/white"
            app:strokeColor="@color/stroke_gris"
            app:strokeWidth="1dp"
            app:cornerRadius="@dimen/card_radio"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_marginTop="@dimen/espacio_L"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>